--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
         </section>
 
         <section id="mainSection2">
-          <div id="abstractSec2"></div>
-
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
@@ -85,25 +83,25 @@
               <div class="col-lg-2">
                 <div class="row">
                   <div class="col-lg-12">
-                    <button class="btn" id="projectSelector">
+                    <div class="btn frontSelector" id="projectSelector">
                       <div class="card-body" id="projectSelText">
                         FONT-END
                       </div>
-                    </button>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-lg-12">
-                    <button class="btn" id="projectSelector">
+                    <div class="btn backSelector" id="projectSelector">
                       <div class="card-body" id="projectSelText">
                         BACK-END
                       </div>
-                    </button>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="col-lg-10">
-                <div id="projectCarousel" class="carousel slide" data-ride="carousel">
+                <div id="projectCarouselFRONT" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
@@ -127,10 +125,42 @@
                       </div>
                     </div>
                   </div>
-                  <a class="carousel-control-prev" href="#projectCarousel" role="button" data-slide="prev">
+                  <a class="carousel-control-prev" href="#projectCarouselFRONT" role="button" data-slide="prev">
                     <span class="sr-only">Previous</span>
                   </a>
-                  <a class="carousel-control-next" href="#projectCarousel" role="button" data-slide="next">
+                  <a class="carousel-control-next" href="#projectCarouselFRONT" role="button" data-slide="next">
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+
+                <div id="projectCarouselBACK" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#projectCarouselBACK" role="button" data-slide="prev">
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#projectCarouselBACK" role="button" data-slide="next">
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
@@ -168,5 +198,6 @@
             </span>
         </div>
     </footer>
+    <script type="text/javascript" src="assets/javascript/javascript.js"></script>
 </body>
 </html>
