--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="container-fluid" id="headerContainer">
             <h1 id="mainHeader">COLLIN WILSON</h1>
             <h5 id="mainSubHeader">DESIGNER | MAKER | CREATOR</h5>
-            <p id="mainBottom">scroll down<br><i class="fa fa-angle-double-down" aria-hidden="true"></i></p>
+            <a id="mainBottom" href="#mainSection1">scroll down<br><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
         </section>
     </header>
     <main>
@@ -84,7 +84,7 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="btn frontSelector" id="projectSelector">
-                      <div class="card-body" id="projectSelText">
+                      <div class="card-body front" id="projectSelText">
                         FONT-END
                       </div>
                     </div>
@@ -102,25 +102,25 @@
               </div>
               <div class="col-lg-10">
                 <div id="projectCarouselFRONT" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
+                  <div class="carousel-inner shadow">
                     <div class="carousel-item active">
-                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                        <h5>Second slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                        <h5>Third slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
@@ -134,25 +134,25 @@
                 </div>
 
                 <div id="projectCarouselBACK" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
+                  <div class="carousel-inner shadow">
                     <div class="carousel-item active">
-                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                        <h5>Second slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/800x400" class="d-block w-100" alt="...">
+                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
+                        <h5>Third slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
