updated skills section and the hobbies section, changed about page background

--- a/index.html
+++ b/index.html
@@ -18,58 +18,70 @@
         </section>
     </header>
     <main>
+        <!-- SECTION ONE -->
         <section id="mainSection1">
           <div class="container-fluid">
-            <div id="triangle"></div>
-            <img class="shadow" src="assets/photos/profile.jpg" alt="profile" id="profile-pic"> 
-          </div>
-          <h1 id="aboutHeader">WHO AM I?</h1>
-          <div class="accordion" id="aboutAccordion">
-            <div class="aboutItem">
-              <div class="card-body" id="headingOne">
-                <h2 class="mb-0">
-                  <button class="btn btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    UNCW GRADUATE
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#aboutAccordion">
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                </div>
-              </div>
-            </div>
-            <div class="aboutItem">
-              <div class="card-body" id="headingTwo">
-                <h2 class="mb-0">
-                  <button class="btn btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    UNC TRAINED WEB DEVELOPER
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#aboutAccordion">
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                </div>
-              </div>
-            </div>
-            <div class="aboutItemLast">
-              <div class="card-body" id="headingThree">
-                <h2 class="mb-0">
-                  <button class="btn btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    MAKER WITH A PASSION FOR ART AND DESIGN
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#aboutAccordion">
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <img class="shadow" src="assets/photos/profile.jpg" alt="profile" id="profile-pic">
               </div>
             </div>
           </div>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <h1 id="aboutHeader">WHO AM I?</h1>
+                <div class="accordion" id="aboutAccordion">
+                  <div class="aboutItem">
+                    <div class="card-body" id="headingOne">
+                      <h2 class="mb-0">
+                        <button class="btn btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                          UNCW GRADUATE
+                        </button>
+                      </h2>
+                    </div>
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#aboutAccordion">
+                      <div class="card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="aboutItem">
+                    <div class="card-body" id="headingTwo">
+                      <h2 class="mb-0">
+                        <button class="btn btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          UNC TRAINED WEB DEVELOPER
+                        </button>
+                      </h2>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#aboutAccordion">
+                      <div class="card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="aboutItemLast">
+                    <div class="card-body" id="headingThree">
+                      <h2 class="mb-0">
+                        <button class="btn btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          MAKER WITH A PASSION FOR ART AND DESIGN
+                        </button>
+                      </h2>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#aboutAccordion">
+                      <div class="card-body">
+                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          
         </section>
 
+        <!-- SECTION TWO -->
         <section id="mainSection2">
           <div class="container-fluid">
             <div class="row">
@@ -132,7 +144,6 @@
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
-
                 <div id="projectCarouselBACK" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner shadow">
                     <div class="carousel-item active">
@@ -169,14 +180,186 @@
           </div>
         </section>
 
+        <!-- SECTION THREE -->
         <section id="mainSection3">
-          <h1 id="skillsHeader">SKILLS</h1>
+          <div class="conatiner-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <h1 id="skillsHeader">SKILLS</h1>
+              </div>
+            </div>
+            <div class="row" id="skillsRow">
+              <div class="col-lg-4">
+                <div class="card shadow" id="skillCard1">
+                  <div class="card-header" id="skillListHeader">
+                    Languages
+                  </div>
+                  <div class="card-body" id="skillCardBody">
+                    <ul id="skillListEl">
+                      <li id="skillListItem">
+                        JavaScript
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        CSS3
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        HTML5
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        ES6
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        Python
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        GIT
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="card shadow" id="skillCard2">
+                  <div class="card-header" id="skillListHeader">
+                    Technologies
+                  </div>
+                  <div class="card-body" id="skillCardBody">
+                    <ul id="skillListEl">
+                      <li id="skillListItem">
+                        Bootstrap
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        Jquery
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        Angular.js
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        React.js
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        Express.js
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 52%" aria-valuenow="52" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        Node.js
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="card shadow" id="skillCard3">
+                  <div class="card-header" id="skillListHeader">
+                    Other
+                  </div>
+                  <div class="card-body" id="skillCardBody">
+                    <ul id="skillListEl">
+                      <li id="skillListItem">
+                        GITHUB
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        GITBASH
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        PHP
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        C#
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        APIs
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                      <li id="skillListItem">
+                        MySQL
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
+        <!-- SECTION FOUR -->
         <section  id="mainSection4">
-          <h1 id="hobbiesHeader">HOBBIES</h1>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <h1 id="hobbiesHeader">HOBBIES</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="row">
+                  <div class="col-lg-1"></div>
+                  <div class="col-lg-5">
+                    yes
+                  </div>
+                  <div class="col-lg-5">
+                    yes
+                  </div>
+                  <div class="col-lg-1"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
     </main>
+
     <footer>
         <div class="container-fluid footer">
             <span>
