--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <section class="container-fluid" id="headerContainer">
             <h1 id="mainHeader">COLLIN WILSON</h1>
             <h5 id="mainSubHeader">DESIGNER | MAKER | CREATOR</h5>
-            <a id="mainBottom" href="#mainSection1">scroll down<br><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
         </section>
-        
+        <div id="scrollElem">
+            <a id="mainBottom" href="#mainSection1">scroll down<br><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+        </div>
     </header>
     <main>
         <!-- SECTION ONE -->
@@ -184,156 +185,156 @@
 
         <!-- SECTION THREE -->
         <section id="mainSection3">
-          <div class="conatiner-fluid">
-            <div class="row">
-              <div class="col-lg-12">
-                <h1 id="skillsHeader">SKILLS</h1>
-              </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 id="skillsHeader">SKILLS</h1>
+                    </div>
+                </div>
+                <div class="row" id="skillsRow">
+                    <div class="col-lg-3">
+                        <div class="card shadow" id="skillCard1">
+                        <div class="card-header" id="skillListHeader">
+                            Languages
+                        </div>
+                        <div class="card-body" id="skillCardBody">
+                            <ul id="skillListEl">
+                            <li id="skillListItem">
+                                JavaScript
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                CSS3
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                HTML5
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                ES6
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                Python
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                GIT
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            </ul>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card shadow" id="skillCard2">
+                        <div class="card-header" id="skillListHeader">
+                            Technologies
+                        </div>
+                        <div class="card-body" id="skillCardBody">
+                            <ul id="skillListEl">
+                            <li id="skillListItem">
+                                Bootstrap
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                Jquery
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                Angular.js
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                React.js
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                Express.js
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 52%" aria-valuenow="52" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                Node.js
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            </ul>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card shadow" id="skillCard3">
+                        <div class="card-header" id="skillListHeader">
+                            Other
+                        </div>
+                        <div class="card-body" id="skillCardBody">
+                            <ul id="skillListEl">
+                            <li id="skillListItem">
+                                GITHUB
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                GITBASH
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                PHP
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                C#
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                APIs
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li id="skillListItem">
+                                MySQL
+                                <div class="progress">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            </ul>
+                        </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row" id="skillsRow">
-              <div class="col-lg-4">
-                <div class="card shadow" id="skillCard1">
-                  <div class="card-header" id="skillListHeader">
-                    Languages
-                  </div>
-                  <div class="card-body" id="skillCardBody">
-                    <ul id="skillListEl">
-                      <li id="skillListItem">
-                        JavaScript
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        CSS3
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        HTML5
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        ES6
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        Python
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        GIT
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="card shadow" id="skillCard2">
-                  <div class="card-header" id="skillListHeader">
-                    Technologies
-                  </div>
-                  <div class="card-body" id="skillCardBody">
-                    <ul id="skillListEl">
-                      <li id="skillListItem">
-                        Bootstrap
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        Jquery
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        Angular.js
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        React.js
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        Express.js
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 52%" aria-valuenow="52" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        Node.js
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="card shadow" id="skillCard3">
-                  <div class="card-header" id="skillListHeader">
-                    Other
-                  </div>
-                  <div class="card-body" id="skillCardBody">
-                    <ul id="skillListEl">
-                      <li id="skillListItem">
-                        GITHUB
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        GITBASH
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        PHP
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        C#
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        APIs
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                      <li id="skillListItem">
-                        MySQL
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </section>
 
         <!-- SECTION FOUR -->
