--- a/index.html
+++ b/index.html
@@ -117,26 +117,33 @@
                 <div id="projectCarouselFRONT" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner shadow">
                     <div class="carousel-item active">
-                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
+                      <img src="./assets/dev-photos/website-pics/front/weather.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
+                      <img src="./assets/dev-photos/website-pics/front/movie.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
+                      <img src="./assets/dev-photos/website-pics/front/generator.JPG" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
+                    <div class="carousel-item">
+                        <img src="./assets/dev-photos/website-pics/front/planner.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>fourth slide label</h5>
+                          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
+                      </div>
                   </div>
                   <a class="carousel-control-prev" href="#projectCarouselFRONT" role="button" data-slide="prev">
                     <span class="sr-only">Previous</span>
@@ -148,26 +155,33 @@
                 <div id="projectCarouselBACK" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner shadow">
                     <div class="carousel-item active">
-                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
+                      <img src="./assets/dev-photos/website-pics/back/employee.JPG" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
+                      <img src="./assets/dev-photos/website-pics/back/note.JPG" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="http://placehold.it/1703x830" class="d-block w-100" alt="...">
+                      <img src="./assets/dev-photos/website-pics/back/team.JPG" class="d-block w-100" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                       </div>
                     </div>
+                    <div class="carousel-item">
+                        <img src="./assets/dev-photos/website-pics/back/readme.JPG" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>fourth slide label</h5>
+                          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
+                      </div>
                   </div>
                   <a class="carousel-control-prev" href="#projectCarouselBACK" role="button" data-slide="prev">
                     <span class="sr-only">Previous</span>
